feat: TICKET-00000 added jackson examples